--- a/ProjectThree/index.html
+++ b/ProjectThree/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
+    <div class="control-button">
+      <span>Start Game</span>
+    </div>
+
     <div class="container">
       <div class="name">Hello :<span></span></div>
       <div class="tries">Wrong Tries : <span>0</span></div>
@@ -115,6 +119,14 @@
           <img src="./Fruits-img/Pear.png" alt="Pear" />
         </div>
       </div>
+
+      <div class="game-block" data-fruits="Pear">
+        <div class="face front"></div>
+        <div class="face back">
+          <img src="./Fruits-img/Pear.png" alt="Pear" />
+        </div>
+      </div>
+
       <div class="game-block" data-fruits="Pear">
         <div class="face front"></div>
         <div class="face back">
@@ -123,6 +135,6 @@
       </div>
     </div>
 
-    <script src="./Fruits-img/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
