--- a/ProjectThree/index.html
+++ b/ProjectThree/index.html
@@ -15,6 +15,7 @@
       <div class="name">Hello :<span></span></div>
       <div class="tries">Wrong Tries : <span>0</span></div>
     </div>
+
     <div class="memory-game-blocks">
       <div class="game-block" data-fruits="apple">
         <div class="face front"></div>
@@ -135,6 +136,8 @@
       </div>
     </div>
 
+    <audio src="audio/correct.wav" id="correct" preload="auto"></audio>
+    <audio src="audio/wrong.wav" id="wrong" preload="auto"></audio>
     <script src="./app.js"></script>
   </body>
 </html>
