--- a/ProjectFive/index.html
+++ b/ProjectFive/index.html
@@ -14,10 +14,17 @@
         <input type="text" />
         <span class="plus">+</span>
       </div>
+
       <div class="tasks-content">
         <span class="no-task-message">No Tasks To Show</span>
       </div>
+
+      <div class="deleteAll">
+        <span class="deleteAllTasks">Delete All Tasks</span>
+        <span class="deleteAllToggleTasks">Delete Toggle</span>
+      </div>
     </div>
+
     <!-- status -->
     <div class="task-stats">
       <div class="tasks-count">Tasks <span>0</span></div>
