--- a/Menu/index.html
+++ b/Menu/index.html
@@ -13,6 +13,8 @@
         <h2>Our Menu</h2>
         <div class="underline"></div>
       </div>
+
+      <div class="section-center"></div>
     </section>
   </body>
 </html>
